--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>com.xmlcalabash</artifactId>
-  <version>1.0.18-p1-SNAPSHOT</version>
+  <version>1.0.23-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>XML Calabash</name>
@@ -29,19 +29,33 @@
   </licenses>
 
   <properties>
-    <calabash.source.url>https://github.com/ndw/xmlcalabash1/archive/v1.0.18.95.zip</calabash.source.url>
+    <calabash.tag>v1.0.23.95</calabash.tag>
+    <sources.dir>${basedir}/target/sources</sources.dir>
   </properties>
 
   <dependencies>
+    <!-- required -->
     <dependency>
       <groupId>net.sf.saxon</groupId>
       <artifactId>Saxon-HE</artifactId>
-      <version>9.5.1-5</version>
+      <version>9.5.1-8</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.7</version>
+    </dependency>
+    <!-- optional -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.thaiopensource</groupId>
@@ -59,12 +73,18 @@
         </exclusion>
       </exclusions>
     </dependency>
-	<dependency>
-	    <groupId>javax.mail</groupId>
-	    <artifactId>javax.mail-api</artifactId>
-	    <version>1.4.5</version>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <version>1.4.5</version>
       <optional>true</optional>
-	</dependency>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant</artifactId>
+      <version>1.8.4</version>
+      <optional>true</optional>
+    </dependency>
     <dependency>
       <groupId>org.ccil.cowan.tagsoup</groupId>
       <artifactId>tagsoup</artifactId>
@@ -77,16 +97,21 @@
       <version>1.4</version>
       <optional>true</optional>
     </dependency>
-	<dependency>
-	    <groupId>xmlunit</groupId>
-	    <artifactId>xmlunit</artifactId>
-	    <version>1.3</version>
+    <dependency>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
+      <version>1.3</version>
       <optional>true</optional>
-	</dependency>
+    </dependency>
   </dependencies>
 
+  <scm>
+    <connection>scm:git:https://github.com/ndw/xmlcalabash1.git</connection>
+    <tag>${calabash.tag}</tag>
+  </scm>
+
   <build>
-    <sourceDirectory>${basedir}/target/calabash/src</sourceDirectory>
+    <sourceDirectory>${sources.dir}</sourceDirectory>
 
     <extensions>
       <extension>
@@ -106,29 +131,54 @@
         </configuration>
       </plugin>
       <plugin>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.9.2</version>
+        <executions>
+          <execution>
+            <id>checkout</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>checkout</goal>
+            </goals>
+            <configuration>
+              <checkoutDirectory>${sources.dir}</checkoutDirectory>
+              <scmVersionType>tag</scmVersionType>
+              <scmVersion>${calabash.tag}</scmVersion>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-patch-plugin</artifactId>
+        <version>1.1.1</version>
+        <configuration>
+          <naturalOrderProcessing>true</naturalOrderProcessing>
+        </configuration>
+        <executions>
+          <execution>
+            <id>patch</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>apply</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
-            <id>download</id>
+            <id>build-jar</id>
             <phase>compile</phase>
             <goals>
               <goal>run</goal>
             </goals>
             <configuration>
               <target>
-                <property name="calabash.tmp.dir" value="${java.io.tmpdir}/calabash/${project.version}" />
-                <mkdir dir="${calabash.tmp.dir}" />
-                <get dest="${calabash.tmp.dir}/source.zip" src="${calabash.source.url}" usetimestamp="true" skipexisting="true" />
-                <unzip dest="${calabash.tmp.dir}" src="${calabash.tmp.dir}/source.zip" />
-                <move todir="${project.build.directory}/calabash">
-                  <fileset dir="${calabash.tmp.dir}">
-                    <include name="xmlcalabash1-*/**/*" />
-                  </fileset>
-                  <mapper type="regexp" from="^xmlcalabash1-[^/\\]*[/\\](.*)" to="\1" />
-                </move>
-                <property name="ant.build.javac.source" value="1.5" />
-                <property name="ant.build.javac.target" value="1.5" />
-                <ant dir="${project.build.directory}/calabash" target="jar" />
+                <property name="ant.build.javac.source" value="1.6" />
+                <property name="ant.build.javac.target" value="1.6" />
+                <ant dir="${sources.dir}" target="jar" />
               </target>
             </configuration>
           </execution>
@@ -140,7 +190,7 @@
             </goals>
             <configuration>
               <target>
-                <copy file="${project.build.directory}/calabash/calabash.jar" tofile="${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}" overwrite="true" verbose="true" />
+                <copy file="${sources.dir}/calabash.jar" tofile="${project.build.directory}/${project.artifactId}-${project.version}.${project.packaging}" overwrite="true" verbose="true" />
               </target>
             </configuration>
           </execution>
@@ -164,6 +214,63 @@
             </executions>
           </plugin>
           <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <phase>none</phase>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>javadoc</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <path id="build.classpath">
+                      <fileset dir="${sources.dir}/lib">
+                        <include name="*.jar"/>
+                      </fileset>
+                      <!-- <pathelement location="${sources.dir}/lib"/> -->
+                    </path>
+                    <javadoc destdir="${project.build.directory}/javadoc" classpathref="build.classpath">
+                      <fileset dir="${sources.dir}/src" defaultexcludes="yes">
+                        <include name="**"/>
+                        <exclude name="com/xmlcalabash/extensions/MetadataExtractor.java"/>
+                        <exclude name="com/xmlcalabash/extensions/DiTAA.java"/>
+                        <exclude name="com/xmlcalabash/extensions/PlantUML.java"/>
+                        <exclude name="com/xmlcalabash/extensions/DeltaXML.java"/>
+                        <exclude name="com/xmlcalabash/extensions/SendMail.java"/>
+                        <exclude name="com/xmlcalabash/extensions/xmlunit/Compare.java"/>
+                        <exclude name="com/xmlcalabash/extensions/marklogic/XCCAdhocQuery.java"/>
+                        <exclude name="com/xmlcalabash/extensions/marklogic/XCCInsertDocument.java"/>
+                        <exclude name="com/xmlcalabash/extensions/marklogic/XCCInvokeModule.java"/>
+                        <exclude name="com/xmlcalabash/extensions/Sparql.java"/>
+                        <exclude name="com/xmlcalabash/extensions/RDFa.java"/>
+                        <exclude name="com/xmlcalabash/extensions/RDFLoad.java"/>
+                        <exclude name="com/xmlcalabash/extensions/RDFStep.java"/>
+                        <exclude name="com/xmlcalabash/extensions/RDFStore.java"/>
+                        <exclude name="com/xmlcalabash/util/FoXEP.java"/>
+                        <exclude name="com/xmlcalabash/util/FoFOP.java"/>
+                        <exclude name="com/xmlcalabash/util/FoAH.java"/>
+                        <exclude name="com/xmlcalabash/util/CssAH.java"/>
+                        <exclude name="com/xmlcalabash/util/CssPrince.java"/>
+                        <exclude name="com/xmlcalabash/drivers/SaxonProblem.java"/>
+                      </fileset>
+                    </javadoc>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <executions>
               <execution>
@@ -175,6 +282,7 @@
                 <configuration>
                   <descriptors>
                     <descriptor>sources.xml</descriptor>
+                    <descriptor>javadoc.xml</descriptor>
                   </descriptors>
                 </configuration>
               </execution>
