--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -36,9 +36,9 @@
   <dependencies>
     <!-- required -->
     <dependency>
-      <groupId>net.sf.saxon</groupId>
-      <artifactId>Saxon-HE</artifactId>
-      <version>9.5.1-8</version>
+      <groupId>org.daisy.libs</groupId>
+      <artifactId>saxon-he</artifactId>
+      <version>9.5.1.5</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -58,9 +58,9 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>com.thaiopensource</groupId>
+      <groupId>org.daisy.libs</groupId>
       <artifactId>jing</artifactId>
-      <version>20091111</version>
+      <version>20120724.0.0</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
