--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -171,13 +171,9 @@
                                 com.thaiopensource.*
                 </Export-Package>
                 <Import-Package>
-                  com.icl.saxon;resolution:=optional,
-                  net.sf.saxon;resolution:=optional,
-                  org.apache.tools.ant.*;resolution:=optional,
-                  org.apache.xalan.*;resolution:=optional,
-                  org.apache.xerces.*;resolution:=optional,
-                  org.apache.xml.resolver.*;resolution:=optional,
-                  org.iso_relax.*;resolution:=optional,
+                  !org.relaxng.datatype,
+                  !org.relaxng.datatype.helpers,
+                  !com.thaiopensource.*,
                   *
                 </Import-Package>
                 <SPI-Consumer>javax.xml.parsers.SAXParserFactory#newInstance</SPI-Consumer>
