--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jing</artifactId>
-  <version>20151127.0.0-SNAPSHOT</version>
+  <version>20151127.0.0</version>
   <packaging>jar</packaging>
 
   <name>Jing</name>
@@ -288,4 +288,8 @@
 	
   </profiles>
 
+
+  <scm>
+    <tag>v20151127.0.0</tag>
+  </scm>
 </project>
