--- a/saxon-98/pom.xml
+++ b/saxon-98/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>saxon-he</artifactId>
-  <version>9.8.0.8-SNAPSHOT</version>
+  <version>9.8.0.8</version>
   <packaging>bundle</packaging>
 
   <name>Saxon HE (OSGi Bundle)</name>
@@ -186,4 +186,8 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>v9.8.0.8</tag>
+  </scm>
 </project>
