--- a/jnaerator/pom.xml
+++ b/jnaerator/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jnaerator</artifactId>
-  <version>0.11-p1-SNAPSHOT</version>
+  <version>0.11-p1</version>
   <packaging>bundle</packaging>
 
   <name>JNAerator (OSGi Bundle)</name>
@@ -210,4 +210,8 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>jnaerator-0.11-p1</tag>
+  </scm>
 </project>
