--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jing</artifactId>
-  <version>20151127.0.1</version>
+  <version>20151127.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Jing</name>
@@ -292,8 +292,4 @@
 	</profile>
 	
   </profiles>
-
-  <scm>
-    <tag>v20151127.0.1</tag>
-  </scm>
 </project>
