--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jing</artifactId>
-  <version>20151127.0.1-SNAPSHOT</version>
+  <version>20151127.0.1</version>
   <packaging>jar</packaging>
 
   <name>Jing</name>
@@ -292,4 +292,8 @@
 	</profile>
 	
   </profiles>
+
+  <scm>
+    <tag>v20151127.0.1</tag>
+  </scm>
 </project>
