--- a/saxon/pom.xml
+++ b/saxon/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>saxon-he</artifactId>
-  <version>10.5</version>
+  <version>10.5-p1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Saxon HE (OSGi Bundle)</name>
@@ -189,8 +189,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>v10.5</tag>
-  </scm>
 </project>
