--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <module>parboiled</module>
     <module>pegdown</module>
     <module>saxon</module>
-    <!-- <module>servlet-api</module> -->
+    <module>servlet-api</module>
   </modules>
 
 </project>
