--- a/servlet-api/pom.xml
+++ b/servlet-api/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>2</version>
+    <version>5</version>
     <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>servlet-api</artifactId>
-  <version>2.5.0-2-SNAPSHOT</version>
+  <version>3.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>JavaServlet(TM) Specification (OSGi Bundle)</name>
@@ -29,17 +29,11 @@
     </license>
   </licenses>
 
-  <properties>
-    <lib.groupId>javax.servlet</lib.groupId>
-    <lib.artifactId>servlet-api</lib.artifactId>
-    <lib.version>2.5</lib.version>
-  </properties>
-
   <dependencies>
     <dependency>
-      <groupId>${lib.groupId}</groupId>
-      <artifactId>${lib.artifactId}</artifactId>
-      <version>${lib.version}</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
   </dependencies>
 
@@ -85,9 +79,8 @@
                 <configuration>
                   <artifactItems>
                     <artifactItem>
-                      <groupId>${lib.groupId}</groupId>
-                      <artifactId>${lib.artifactId}</artifactId>
-                      <version>${lib.version}</version>
+                      <groupId>javax.servlet</groupId>
+                      <artifactId>javax.servlet-api</artifactId>
                       <classifier>sources</classifier>
                       <outputDirectory>${project.build.directory}/sources</outputDirectory>
                     </artifactItem>
